<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headingMainAct"
        android:layout_width="229dp"
        android:layout_height="68dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="71dp"
        android:text="@string/add_new_climbs"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/gradeSelect"
        android:layout_width="163dp"
        android:layout_height="95dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="206dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/boulderClimb"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/boulder" />

        <RadioButton
            android:id="@+id/ropedClimb"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/roped_climb" />
    </RadioGroup>

    <EditText
        android:id="@+id/mainClimbName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="301dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/climb_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/gradeSelect"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mainClimbDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="391dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/date_climbed"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/mainClimbGrade"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mainClimbGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="346dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/grade"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/mainClimbName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainGoToList"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_marginTop="546dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="140dp"
        android:onClick="goToDisplayList"
        android:text="@string/view_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainAddClimb"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="546dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="140dp"
        android:onClick="addClimbToList"
        android:text="@string/add_new_climb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>